--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "checkSol": "solhint contracts/*.sol contracts/**/*.sol"
   },
   "repository": {
     "type": "git",
