--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "ethers": "^6.7.1",
     "hardhat": "^2.17.4",
+    "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.6.2",
